crates/pixi_manifest/src/toml/snapshots/pixi_manifest__toml__manifest__test__unused_features.snap
---
source: crates/pixi_manifest/src/toml/manifest.rs
expression: "expect_parse_warnings(r#\"\n        [workspace]\n        name = \"foo\"\n        channels = []\n        platforms = ['osx-64']\n\n        [feature.foobar.dependencies]\n\n        [feature.generic.target.osx.dependencies]\n        \"#,)"
---
  ⚠ The feature 'foobar' is defined but not used in any environment
   ╭─[pixi.toml:7:18]
 6 │
 7 │         [feature.foobar.dependencies]
   ·                  ──────
 8 │
   ╰────
  help: Remove the feature from the manifest or add it to an environment

  ⚠ The feature 'generic' is defined but not used in any environment
    ╭─[pixi.toml:9:18]
  8 │
  9 │         [feature.generic.target.osx.dependencies]
    ·                  ───────
 10 │
    ╰────
  help: Remove the feature from the manifest or add it to an environment
