crates/pixi_manifest/src/toml/snapshots/pixi_manifest__toml__manifest__test__workspace_name_required.snap
---
source: crates/pixi_manifest/src/toml/manifest.rs
expression: "expect_parse_failure(r#\"\n        [workspace]\n        channels = []\n        platforms = []\n        preview = [\"pixi-build\"]\n        \"#,)"
---
  × missing field 'name' in table
   ╭─[pixi.toml:2:9]
 1 │     
 2 │ ╭─▶         [workspace]
 3 │ │           channels = []
 4 │ │           platforms = []
 5 │ ╰─▶         preview = ["pixi-build"]
 6 │             
   ╰────
